--- a/public/style.css
+++ b/public/style.css
@@ -1,9 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 @import url("https://cdn.jsdelivr.net/npm/halfmoon@1.1.1/css/halfmoon-variables.min.css");
 
-body: {
+body {
   margin: 0;
   padding: 0;
+  background-color: var(--dm-base-body-bg-color);
 }
 
 h1 {
